--- a/theme/web/login.html
+++ b/theme/web/login.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label" id="passwordLabel" for="passwordInput">Password</label>
+                                <label class="control-label" id="passwordLabel" for="passwordInput">Password (in docker use "n0t-A-s3cRet")</label>
                                 <div class="inputwrapper">
                                     <input
                                         id="passwordInput"
